# Blackhole-Visualization

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/: main.cpp
source/: application.cpp  application.hpp  camera.cpp  camera.hpp  gui_state.hpp  main.cpp  window.hpp
source/renderer/: context.hpp  renderer.cpp  renderer.hpp
source/renderer/shaders/: compute_streamlines.glsl  draw_field.glsl  draw_streamline_bounding_volume.glsl  draw_streamlines.glsl
source/renderer/shared/: shared.inl
source/renderer/tasks/: compute_streamlines.inl  draw_field.inl  draw_streamline_start_volume.inl  draw_streamlines.inl  upload_data.inl
